Update Login & Citizen Function

--- a/Content/Site.css
+++ b/Content/Site.css
@@ -26,3 +26,46 @@ textarea {
 #map {
     height: 100%;
 }
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+divLogin {
+    background: rgb(219, 226,226);
+    padding-top: 10%;
+}
+
+.row {
+    background: white;
+    border-radius: 30px;
+    margin: auto;
+    box-shadow: 12px 12px 22px grey;
+}
+
+img {
+    padding-top: 15%;
+    padding-left: 35%;
+    margin: auto;
+    align-content: center;
+    border-top-left-radius: 30px;
+    border-bottom-left-radius: 30px;
+}
+
+.btn1 {
+    border: none;
+    outline: none;
+    height: 40px;
+    width: 100%;
+    background-color: black;
+    color: white;
+    border-radius: 4px;
+    font-weight: bold;
+}
+
+    .btn1:hover {
+        background: white;
+        border: 1px solid;
+        color: black;
+    }
