--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -8,7 +8,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/vue-select/dist/vue-select.css" />
     <link rel="stylesheet" type="text/css" href="\Content\jquery.datetimepicker.css" />
-       <script src="~/Scripts/function.js"></script>
+    <script src="~/Scripts/function.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+    <!-- Load required Bootstrap and BootstrapVue CSS -->
+    <link type="text/css" rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.min.css" />
+    <link type="text/css" rel="stylesheet" href="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.css" />
 
 </head>
 <body>
@@ -16,13 +21,13 @@
         <a class="navbar-brand" href="#">
             <img src="https://iconape.com/wp-content/files/lc/258474/svg/258474.svg" width="100" height="100" class="d-inline-block align-top" alt="">
         </a>
-            <div class="nav">
-                <h3><a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a></h3>
-                <h3><a class="nav-item nav-link" href="#">Features</a></h3>
-                <h3><a class="nav-item nav-link" href="#">Pricing</a></h3>
-                <h3><a class="nav-item nav-link" href="#">Disabled</a></h3>
-            </div>
-        
+        <div class="nav">
+            <h3><a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a></h3>
+            <h3><a class="nav-item nav-link" href="#">Features</a></h3>
+            <h3><a class="nav-item nav-link" href="#">Pricing</a></h3>
+            <h3><a class="nav-item nav-link" href="#">Disabled</a></h3>
+        </div>
+
         <a class="navbar-brand" href="#">
             <img src="https://eservices.immigration.gov.lk/vs/images/immigration-logo.png" width="100" height="100" class="d-inline-block align-top" alt="">
         </a>
@@ -36,7 +41,7 @@
     @Scripts.Render("https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js")
     @Scripts.Render("https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.js")
     @Scripts.Render("https://cdnjs.cloudflare.com/ajax/libs/axios/0.18.0/axios.js")
- 
+
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.3/dist/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
@@ -47,6 +52,22 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.1/jquery-ui.js"></script>
     <script src="~/Scripts/jquery.datetimepicker.full.js"></script>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+
+    <!-- Load required Bootstrap and BootstrapVue CSS -->
+    <link type="text/css" rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.min.css" />
+    <link type="text/css" rel="stylesheet" href="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.css" />
+
+    <!-- Load polyfills to support older browsers -->
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es2015%2CIntersectionObserver" crossorigin="anonymous"></script>
+
+    <!-- Load Vue followed by BootstrapVue -->
+    <script src="https://unpkg.com/vue@latest/dist/vue.min.js"></script>
+    <script src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.js"></script>
+
+    <!-- Load the following for BootstrapVueIcons support -->
+    <script src="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue-icons.min.js"></script>
 
 
 
