--- a/Views/Shared/_OfficerLayout.cshtml
+++ b/Views/Shared/_OfficerLayout.cshtml
@@ -15,7 +15,7 @@
     <link type="text/css" rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.min.css" />
     <link type="text/css" rel="stylesheet" href="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.min.css" />
 
-   
+
 
 </head>
 <body>
@@ -24,10 +24,10 @@
             <img src="https://iconape.com/wp-content/files/lc/258474/svg/258474.svg" width="100" height="100" class="d-inline-block align-top" alt="">
         </a>
         <div class="nav">
-            <h3><a class="nav-item nav-link active" href="#">Home <span class="sr-only">(current)</span></a></h3>
-            <h3><a class="nav-item nav-link" href="#">Features</a></h3>
-            <h3><a class="nav-item nav-link" href="#">Pricing</a></h3>
-            <h3><a class="nav-item nav-link" href="#">Disabled</a></h3>
+            <h3><a class="nav-item nav-link active" href="/Officer/Citizens">Home <span class="sr-only">(current)</span></a></h3>
+            <h3><a class="nav-item nav-link" href="#">Complaints</a></h3>
+            <h3><a class="nav-item nav-link" href="/Officer/CitizenDetails">Citizen Search</a></h3>
+            @*<h3><a class="nav-item nav-link" href="#">Location</a></h3>*@
         </div>
 
         <a class="navbar-brand" href="#">
