--- a/Views/Citizen/Home.cshtml
+++ b/Views/Citizen/Home.cshtml
@@ -1,22 +1,23 @@
 ﻿
 @{
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Home";
+    Layout = "~/Views/Shared/_CitizenLayout.cshtml";
 }
 <div id="divCitizens" class="justify-content-center" v-cloak>
     <div class="jumbotron">
         <div class="card-body ">
             <form id="frmCitizen" v-if="editCitizen">
-                <h3>Citizen Registraion</h3>
+                <h3>Edit Citizen </h3>
                 <div class="form-row">
                     <div class="form-group col-6">
                         <div class="form-field mb-2">
                             <label class="form-label">First Name</label>
-                            <input type="text" class="form-control" placeholder="" v-model="editCitizen.first_name">
+                            <input type="text" class="form-control" placeholder="" v-model="editCitizen.first_name" disabled>
                         </div>
                     </div>
                     <div class="form-group col-6">
                         <label class="form-label">Last Name</label>
-                        <input type="text" class="form-control" placeholder="" v-model="editCitizen.last_name">
+                        <input type="text" class="form-control" placeholder="" v-model="editCitizen.last_name" disabled>
                     </div>
                 </div>
                 <div class="form-row">
@@ -53,22 +54,8 @@
                 <div class="form-row">
                     <div class="col-6 float-start px-0 px-md-1">
                         <div class="form-field mb-2">
-                            <label class="form-label">Password</label>
-                            <input type="text" class="form-control" placeholder="" v-model="editCitizen.password">
-                        </div>
-                    </div>
-                    <div class="col-6 float-start px-0 px-md-1">
-                        <div class="form-field mb-2">
-                            <label class="form-label">Date Of Birth</label>
-                            <input type="text" class="form-control datepicker-input" placeholder="" v-model="editCitizen.dob">
-                        </div>
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="col-6 float-start px-0 px-md-1">
-                        <div class="form-field mb-2">
                             <label class="form-label">NIC</label>
-                            <input type="text" class="form-control" placeholder="" v-model="editCitizen.nic">
+                            <input type="text" class="form-control" placeholder="" v-model="editCitizen.nic" disabled>
                         </div>
                     </div>
                     <div class="col-6 float-start px-0 px-md-1">
@@ -78,13 +65,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="form-row">
-                    <div class="col-12 float-start px-0 px-md-1">
-                        <label class="form-label">Select Your Location</label>
-                        <div id="map" style="width:100%;height:400px;"></div>
-                    </div>
-                </div>
-                &nbsp;
                 <div class="form-row">
                     <div class="col-6 float-start px-0 px-md-1">
                         <div class="form-field mb-2">
@@ -131,9 +111,9 @@
     </div>
 </div>
 
-@section Scripts {  
+@section Scripts {
 
-<script>
+    <script>
     Vue.config.devtools = true;
 
     if (vueCitizens != null) {
@@ -148,7 +128,7 @@
             professions: [],
             professionId: null,
             location: {},
-            
+
 
 
         },
@@ -193,7 +173,7 @@
                         JSON.stringify(mapsMouseEvent.latLng.toJSON(), null, 2)
                     );
                     infoWindow.open(map);
-                    
+
                 });
             },
 
@@ -204,7 +184,7 @@
         mounted() {
             this.getProfessions();
             window.initMap = this.initMap;
-           
+
         },
     });
     $(function () {
@@ -213,5 +193,6 @@
             format: 'd/m/Y'
         });
     });
-</script>
+    </script>
 }
+
