--- a/Views/Login/Login.cshtml
+++ b/Views/Login/Login.cshtml
@@ -8,12 +8,12 @@
         <div class="container">
             <div class="row no-gutters">
                 <div class="col-lg-5">
-                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRiB9t90MaeaSUiDNWPfZzBR_irRsV0GgCXGA&usqp=CAU"
+                    <img src="https://yt3.ggpht.com/ytc/AKedOLSFn_76oHyXOB5jPaUaFeuIWR_FckFt3-M4D3Sh=s900-c-k-c0x00ffffff-no-rj"
                          class="img-fluid"
                          alt="" />
                 </div>
                 <div class="col-lg-7 px-5 pt-5">
-                    <h1 class="font-weight-bold py-3">CDC</h1>
+                    <h1 class="font-weight-bold py-3">SLBFE PORTAL</h1>
                     <h4>Sign in to your account</h4>
                     <form name="loginForm" onsubmit="return login()">
                         <div class="form-row">
@@ -38,9 +38,8 @@
                                 <button type="button" @@click="validate" class="btn1 mt-3 mb-5">Login</button>
                             </div>
                         </div>
-                        <a href="forgotPassword.html">Forgot Password</a>
                         <p>
-                            Don't have an account? <a href="register.html">Register here</a>
+                            Don't have an account? <a href="/Citizen">Register here</a>
                         </p>
                     </form>
                 </div>
