--- a/Views/Officer/Citizens.cshtml
+++ b/Views/Officer/Citizens.cshtml
@@ -1,24 +1,34 @@
 ﻿
 @{
     ViewBag.Title = "Citizens";
-    Layout = "~/Views/Shared/_Layout.cshtml";
+    Layout = "~/Views/Shared/_OfficerLayout.cshtml";
 }
 <div id="divCitizens" class="justify-content-center" v-cloak>
     <div class="jumbotron">
         <div class="card-body ">
-            <form id="frmCitizens">
+            <div id="frmCitizens">
                 <h3>Citizen Details</h3>
-                <div class="form-row">
+                <form class="form-row">
                     <div class="card-body">
                         <b-table striped hover :items="citizens" :fields="fields">
                             <template #cell(Actions)="data">
-                                <button class="btn-outline-info" @@click="getCitizenDetails(data.item.NIC)" title="Show"><i class="far fa-trash-edit"></i></button>
+                                <button type="button" class="btn btn-outline-primary" @@click="getCitizenDetails(data.item.NIC)" title="Show">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-view-list" viewBox="0 0 16 16">
+                                        <path d="M3 4.5h10a2 2 0 0 1 2 2v3a2 2 0 0 1-2 2H3a2 2 0 0 1-2-2v-3a2 2 0 0 1 2-2zm0 1a1 1 0 0 0-1 1v3a1 1 0 0 0 1 1h10a1 1 0 0 0 1-1v-3a1 1 0 0 0-1-1H3zM1 2a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13A.5.5 0 0 1 1 2zm0 12a.5.5 0 0 1 .5-.5h13a.5.5 0 0 1 0 1h-13A.5.5 0 0 1 1 14z" />
+                                    </svg>
+                                </button>
+                                <button type="button" class="btn btn-outline-danger" @@click="CitizenDelete(data.item.id)" title="Delete">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                                        <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z" />
+                                        <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
+                                    </svg>
+                                </button>
                             </template>
                         </b-table>
                     </div>
-                </div>
+                </form>
               
-            </form>
+            </div>
         </div>
     </div>
 </div>
@@ -76,7 +86,33 @@
                 })
             },
             getCitizenDetails(nic) {
-                window.open("https://localhost:44354/Officer/CitizenDetails?nic=" + nic , "_blank");
+                window.open("https://localhost:44354/Officer/CitizenDetails?nic=" + nic);
+            },
+            CitizenDelete(id) {
+                //$.ajax({
+                //    url: 'https://edu.santhawa.lk/apiv1/citizen/' + id,
+                //    type: 'GET',
+                //    headers: { "Authorization": "giiaZEAeuMkBeQXzmdDjaFKTvd5uFSJj" },
+                //    success: function (response) {
+                //        console.log(response);
+                //    },
+                //});
+
+                var url = 'https://edu.santhawa.lk/apiv1/citizen/' + id;
+
+                var xhr = new XMLHttpRequest();
+                xhr.open("DELETE", url);
+
+
+                xhr.setRequestHeader("Authorization", "giiaZEAeuMkBeQXzmdDjaFKTvd5uFSJj");
+
+                xhr.onreadystatechange = function () {
+                    if (xhr.readyState === 4) {
+                        console.log(xhr.status);
+                        console.log(xhr.responseText);
+                    }
+                };
+                xhr.send();
             },
 
 
@@ -86,7 +122,7 @@
         },
         mounted() {
             this.getCitizens();
-            this.getCitizenDetails();
+           // this.getCitizenDetails();
 
         },
     });
