--- a/Views/Shared/_CitizenLayout.cshtml
+++ b/Views/Shared/_CitizenLayout.cshtml
@@ -26,7 +26,7 @@
         <div class="nav">
             <h3><a class="nav-item nav-link active" href="/Citizen/Home">Home <span class="sr-only">(current)</span></a></h3>
             <h3><a class="nav-item nav-link" href="/Citizen/Qualification">Qualification</a></h3>
-            <h3><a class="nav-item nav-link" href="#">Complaints</a></h3>
+            <h3><a class="nav-item nav-link" href="/Citizen/CtitzenComplaint">Complaints</a></h3>
             <h3><a class="nav-item nav-link" href="#">Location</a></h3>
         </div>
 
